Fix overflow-x

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,7 +3,7 @@
 
 html {
     font-size: 62.5%;
-    overflow: hidden;
+    overflow-x: hidden;
     position: relative;
 }
 
