--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -54,6 +54,7 @@
             align-items: center;
             display: flex !important;
             flex-direction: row !important;
+            transform: translateX(0%);
             position: static;
             justify-content: center;
             border: none;
