--- a/src/styles/components/_projects.scss
+++ b/src/styles/components/_projects.scss
@@ -7,7 +7,7 @@
         padding-top: $sm-size;
         display: flex;
         align-items: center;
-        flex-flow: column nowrap;
+        flex-flow: column;
     }
 }
 
